--- a/index.html
+++ b/index.html
@@ -1,258 +1,162 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Lace Hotpants - Premium Soft Feminine Style</title>
-<style>
-  body {
-    font-family: 'Poppins', sans-serif;
-    background-color: #f8f4f0;
-    color: #3e2f2f;
-    margin: 0;
-    padding: 0;
-    line-height: 1.6;
-  }
-
-  .container {
-    max-width: 600px;
-    margin: auto;
-    background-color: #fff;
-    box-shadow: 0 0 15px rgba(0,0,0,0.05);
-    border-radius: 10px;
-    overflow: hidden;
-  }
-
-  img {
-    width: 100%;
-    height: auto;
-    display: block;
-  }
-
-  h1 {
-    text-align: center;
-    color: #6b4f4f;
-    font-size: 1.8em;
-    margin: 20px 10px 10px;
-  }
-
-  p {
-    text-align: justify;
-    padding: 0 20px;
-    color: #4b3b3b;
-  }
-
-  .section {
-    margin: 25px 0;
-  }
-
-  .features, .price {
-    background-color: #f9f6f3;
-    padding: 15px 20px;
-    border-radius: 10px;
-    margin: 20px;
-  }
-
-  .features ul {
-    list-style: none;
-    padding-left: 0;
-  }
-
-  .features li::before {
-    content: "• ";
-    color: #a07855;
-  }
-
-  .gallery {
-    text-align: center;
-  }
-
-  .gallery img {
-    margin-bottom: 10px;
-    border-radius: 10px;
-  }
-
-  .testimonial {
-    background-color: #f9f6f3;
-    padding: 20px;
-    border-left: 5px solid #a07855;
-    margin: 20px;
-    border-radius: 10px;
-    font-style: italic;
-  }
-
-  .countdown {
-    text-align: center;
-    background-color: #e8d7c9;
-    color: #3e2f2f;
-    padding: 15px;
-    border-radius: 10px;
-    margin: 20px;
-    font-weight: bold;
-  }
-
-  .note {
-    background-color: #fdf7f2;
-    padding: 15px 20px;
-    border-radius: 10px;
-    margin: 20px;
-    font-size: 0.95em;
-  }
-
-  .price {
-    text-align: center;
-    font-weight: bold;
-    color: #5a4033;
-  }
-
-  .price h3 {
-    color: #a07855;
-  }
-
-  footer {
-    text-align: center;
-    padding: 15px;
-    font-size: 0.85em;
-    color: #8c7b75;
-  }
-
-  /* Responsive */
-  @media (max-width: 600px) {
-    h1 { font-size: 1.5em; }
-    p { font-size: 0.95em; }
-  }
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <title>lace hotpants — Mocha Modest</title>
+  <meta name="description" content="lace hotpants — Hotpants boxer super jumbo. Lembut, adem, nyaman untuk sehari-hari." />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --bg:#F6F1EC;
+      --card:#FFFDFB;
+      --mocha:#A67C58;
+      --muted:#7A6A5A;
+      --accent:#F1DED0;
+      --radius:12px;
+      --shadow:0 12px 40px rgba(40,30,20,0.06);
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%;margin:0;font-family:Poppins,system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial;background:var(--bg);-webkit-font-smoothing:antialiased}
+    .wrap{max-width:440px;margin:18px auto;padding:12px}
+    .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);overflow:hidden;margin-bottom:14px}
+    .hero img{display:block;width:100%;height:auto;object-fit:contain}
+    h1{font-size:20px;margin:6px 0;color:var(--mocha)}
+    .lead{font-size:14px;color:var(--muted);margin:6px 0}
+    .desc{font-size:14px;color:#2b2b2b;line-height:1.6}
+    .sizes{display:grid;grid-template-columns:1fr 1fr;gap:8px;margin-top:10px}
+    .size{background:linear-gradient(180deg,var(--accent),#fff);padding:10px;border-radius:10px}
+    .size b{color:var(--mocha);display:block;margin-bottom:6px}
+    .details h3{color:var(--mocha);margin-bottom:6px}
+    .details ul{padding-left:16px;margin:0;color:#333}
+    .details li{margin:8px 0}
+    .gallery{display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-top:10px}
+    .gallery img{width:100%;border-radius:8px}
+    .caption{text-align:center;color:var(--muted);font-size:13px;margin-top:6px}
+    .bubble{background:#fff;border-radius:10px;padding:10px;margin-top:10px;border:1px solid rgba(160,130,100,0.05)}
+    .bubble .name{font-weight:700;color:var(--mocha)}
+    .bubble .text{color:#333;margin-top:6px}
+    .timer{display:flex;justify-content:center;gap:10px;margin-top:12px}
+    .timer .box{background:#fff;padding:8px 10px;border-radius:8px;text-align:center}
+    .num{font-weight:800}
+    .lbl{font-size:12px;color:var(--muted)}
+    .note{background:#fff8f4;padding:10px;border-radius:10px;border-left:4px solid var(--mocha);color:var(--muted);margin-top:10px}
+    .pricing{text-align:center;background:#fff;padding:12px;border-radius:10px;margin-top:10px}
+    .promo{font-weight:800;color:#b33f2e;font-size:20px}
+    .normal{text-decoration:line-through;color:var(--muted);font-size:13px;margin-left:8px}
+    .promo-img{position:relative;margin-top:12px}
+    .promo-img img{width:100%;border-radius:10px}
+    .promo-badge{position:absolute;left:10px;top:10px;background:var(--mocha);color:#fff;padding:6px 12px;border-radius:999px;font-weight:700}
+    .embed{padding:8px;background:var(--card);border-radius:10px}
+    footer{text-align:center;color:var(--muted);font-size:13px;margin-top:16px}
+  </style>
 </head>
 <body>
-<div class="container">
+  <div class="wrap">
 
-  <!-- 1. Gambar Utama -->
-  <img src="https://down-id.img.susercontent.com/file/id-11134207-7ra0q-mdiw8w9hn8um61.webp" alt="Lace Hotpants">
-
-  <!-- 2. Judul & Deskripsi -->
-  <h1>Lace Hotpants</h1>
-  <p>Temukan kenyamanan maksimal dengan celana dalam wanita model hotpants boxer super jumbo. Terbuat dari bahan lembut dan elastis yang adem, cocok untuk digunakan harian, tidur, maupun saat beraktivitas.</p>
-  <p>Desain short pants cewek kekinian yang menutup bagian belakang dengan sempurna membuat kamu lebih percaya diri dan bebas bergerak.</p>
-
-  <div class="section features">
-    <h3>Ukuran Tersedia:</h3>
-    <ul>
-      <li><b>Size M</b> – Pinggang 70–74 cm (45–55 kg)</li>
-      <li><b>Size L</b> – Pinggang 74–78 cm (55–65 kg)</li>
-      <li><b>Size XL</b> – Pinggang 78–82.5 cm (65–75 kg)</li>
-      <li><b>Size XXL</b> – Pinggang 82.5–87.5 cm (75–85 kg)</li>
-      <li><b>Size XXXL</b> – Pinggang 87.5–93 cm (85–95 kg)</li>
-    </ul>
-  </div>
-
-  <!-- 3. Detail & Keunggulan -->
-  <div class="section features">
-    <h3>Keunggulan Produk:</h3>
-    <ul>
-      <li>Desain modern dan simple, cocok untuk semua usia</li>
-      <li>Bahan adem, lembut, dan elastis mengikuti bentuk tubuh</li>
-      <li>Menutup sempurna, tidak menerawang</li>
-      <li>Tersedia dalam berbagai warna dan motif menarik</li>
-    </ul>
-  </div>
-
-  <!-- 4. Detail Produk -->
-  <div class="section gallery">
-    <img src="https://down-id.img.susercontent.com/file/id-11134207-7ra0m-mdiw8wddiyz32c.webp" alt="Detail Lace Hotpants 1">
-    <p>Detail bahan halus dan nyaman di kulit.</p>
-    <img src="https://down-id.img.susercontent.com/file/id-11134207-7ra0l-mdiw8w9rpnq061.webp" alt="Detail Lace Hotpants 2">
-    <p>Desain menutup sempurna dan tampilan elegan.</p>
-  </div>
-
-  <!-- 5. Testimoni -->
-  <div class="testimonial">
-    “Suka banget! Bahannya adem dan halus, dipakai seharian tetap nyaman. Ukurannya juga pas dan nggak bikin gerah ❤️”  
-    <br><br>– Rina, Jakarta
-  </div>
-
-  <!-- 6. Countdown -->
-  <div class="countdown">
-    PROMO BERAKHIR DALAM: <span id="timer">00:12:45</span>
-  </div>
-
-  <!-- 7. Note Pengiriman -->
-  <div class="note">
-    🚚 Pengiriman 2 - 4 Hari Setelah Pemesanan<br>
-    📦 Mohon isi alamat dengan lengkap<br>
-    ✅ 100% Product Original
-  </div>
-
-  <!-- 8. Harga -->
-  <div class="price">
-    <h3>🎀 PROMO SPESIAL HARI INI 🎀</h3>
-    <p>Dapatkan diskon spesial untuk hari ini saja, harga akan kembali normal setelah:</p>
-    <p><b>Paket 3 pcs:</b> Rp 155.000<br>
-       <b>Paket 6 pcs:</b> Rp 185.000<br>
-       <small>(Hemat lebih banyak!)</small></p>
-  </div>
-
-  <!-- 9. Gambar Promo -->
-  <div class="section">
-    <img src="https://i.postimg.cc/K8xMnLdG/codgif-ezgif-com-crop.gif" alt="Promo Diskon Lace Hotpants">
-  </div>
-
-  <!-- 10. Form OrderOnline -->
-  <div class="section">
-    <!-- OrderOnline Embed Code - aktif -->
-    <div class="ooef">
-      <form class="orderonline-embed-form" data-username="vita" data-product-slug="lace-hotpants" data-product-id="68f7981c1e10e6aa540abcea" id="oo-embed-form-lace-hotpants-6338" data-origin="orderonline">
-        <div class="ooef-loader">
-          <div>Loading...</div>
-        </div>
-      </form>
+    <div class="card hero">
+      <img src="https://down-id.img.susercontent.com/file/id-11134207-7ra0q-mdiw8w9hn8um61.webp" alt="lace hotpants - hero">
     </div>
-    <script>
-      if (typeof xLogError != 'function') {
-        var xLogError = function (error) {
-          var req = new XMLHttpRequest();
-          var payload = JSON.stringify({ url: document.location.href, line: error.line, stack: error.stack });
-          var params = 'message=' + encodeURIComponent(error.name) + '&payload=' + encodeURIComponent(payload) + '&type=embed&level=error';
-          req.open('POST', 'https://api.orderonline.id/log', true);
-          req.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
-          req.send(params);
-        };
-      }
-      try {
-        if (typeof xEmbedScript != 'function') {
-          var xEmbedScript = function () {
-            !function(w, d, e, v, id, t, s) {
-              if (d.getElementById(id)) return;
-              t = d.createElement(e); t.async = !0; t.src = v; t.id = id;
-              s = d.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t, s);
-            }(window, document, 'script', 'https://cdn.orderonline.id/js/embed-v2-slim.min.js?v=8.0.4', 'oo-embed-js');
-          };
-        }
-        if (typeof xEmbedInit != 'function') {
-          var xEmbedInit = function (w, n) {
-            if (w.ooe) return;
-            n = w.ooe = function() { n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments) };
-            if (!w._ooe) w._ooe = n;
-            n.push = n; n.loaded = !0; n.version = '8.0.4'; n.queue = [];
-          };
-        }
-        xEmbedInit(window);
-        ooe('setup', 'redirect', 'https://vita.orderonline.id');
-        ooe('init', '5f1a8627a9bf8058b0424f32', '68f7981c1e10e6aa540abcea', '68f7981c1e10e6aa540abceb', 'oo-embed-form-lace-hotpants-6338', {"mode":"page","action":"Klik untuk pemesanan","title":"Form Pemesanan","triggerPixel":false,"triggerGtm":false});
-        if (!window.jQuery) {
-          !function(w, d, e, v, id, t, s) {
-            if (d.getElementById(id)) return;
-            t = d.createElement(e); t.async = !0; t.src = v; t.id = id;
-            t.addEventListener('load', xEmbedScript);
-            s = d.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t, s);
-          }(window, document, 'script', 'https://cdn.orderonline.id/js/vendor/jquery.min.js', 'oo-embed-jquery');
-        } else { xEmbedScript(); }
-      } catch (e) { xLogError(e); throw e; }
-    </script>
+
+    <div class="card section">
+      <h1>lace hotpants</h1>
+      <p class="lead">Temukan Kenyamanan Maksimal Dengan Celana Dalam Wanita Model Hotpants Boxer Super Jumbo.</p>
+      <p class="desc">Terbuat dari bahan lembut dan elastis yang adem, cocok untuk digunakan harian, tidur, maupun saat beraktivitas. Desain short pants kekinian yang menutup bagian belakang dengan sempurna membuat kamu lebih percaya diri dan bebas bergerak.</p>
+      <div class="sizes">
+        <div class="size"><b>Size M</b>Lingkar 70–74 cm<br>BB 45–55 kg</div>
+        <div class="size"><b>Size L</b>Lingkar 74–78 cm<br>BB 55–65 kg</div>
+        <div class="size"><b>Size XL</b>Lingkar 78–82.5 cm<br>BB 65–75 kg</div>
+        <div class="size"><b>Size XXL</b>Lingkar 82.5–87.5 cm<br>BB 75–85 kg</div>
+        <div class="size" style="grid-column:1/3"><b>Size XXXL</b>Lingkar 87.5–93 cm<br>BB 85–95 kg</div>
+      </div>
+    </div>
+
+    <div class="card section">
+      <div class="details">
+        <h3>Detail & Keunggulan</h3>
+        <ul>
+          <li>Desain modern dan simple, cocok untuk semua usia</li>
+          <li>Bahan adem, lembut dan elastis mengikuti bentuk tubuh</li>
+          <li>Menutup sempurna, tidak menerawang</li>
+          <li>Tersedia berbagai warna dan motif menarik</li>
+        </ul>
+      </div>
+      <div class="gallery">
+        <div><img src="https://down-id.img.susercontent.com/file/id-11134207-7ra0m-mdiw8wddiyz32c.webp"><div class="caption">Menutup sempurna dan nyaman.</div></div>
+        <div><img src="https://down-id.img.susercontent.com/file/id-11134207-7ra0l-mdiw8w9rpnq061.webp"><div class="caption">Bahan elastis & lembut.</div></div>
+      </div>
+    </div>
+
+    <div class="card section">
+      <h3 style="text-align:center;color:var(--mocha)">Testimoni Pelanggan</h3>
+      <div class="bubble"><div class="name">Alya, Bandung</div><div class="text">"Nyaman banget dipakai tidur maupun aktivitas. Jahitannya rapi dan nggak bikin gerah. Sudah repurchase! ⭐⭐⭐⭐⭐"</div></div>
+      <div class="bubble"><div class="name">Mira, Jakarta</div><div class="text">"Ukuran sesuai dan menutup dengan rapi. Bahannya lembut, cocok untuk kulit sensitif."</div></div>
+    </div>
+
+    <div class="card section">
+      <div style="text-align:center;font-weight:700;color:var(--mocha)">Promo Berakhir Dalam:</div>
+      <div class="timer" id="countdown">
+        <div class="box"><div class="num" id="d">00</div><div class="lbl">hari</div></div>
+        <div class="box"><div class="num" id="h">00</div><div class="lbl">jam</div></div>
+        <div class="box"><div class="num" id="m">00</div><div class="lbl">menit</div></div>
+        <div class="box"><div class="num" id="s">00</div><div class="lbl">detik</div></div>
+      </div>
+
+      <div class="note">
+        <div><b>Catatan Pemesanan & Pengiriman</b><br>• Pengiriman 2–4 Hari Setelah Pemesanan<br>• Mohon Isi Alamat Dengan Lengkap<br>• 100% Product Original</div>
+      </div>
+
+      <div class="pricing">
+        <div style="color:var(--mocha);font-weight:700">PROMO SPESIAL HARI INI</div>
+        <p style="font-size:13px;color:var(--muted)">Dapatkan Diskon Spesial Untuk Hari Ini Saja — Harga Akan Kembali Normal Setelah Promo</p>
+        <div style="display:flex;justify-content:space-between;gap:10px;margin-top:12px">
+          <div style="flex:1;background:#fff;border-radius:8px;padding:10px"><div class="promo">Rp 155.000</div><div style="font-size:13px;color:var(--muted)">Isi 3 pcs</div></div>
+          <div style="flex:1;background:#fff;border-radius:8px;padding:10px"><div class="promo">Rp 185.000</div><div style="font-size:13px;color:var(--muted)">Isi 6 pcs</div></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card section promo-img">
+      <img src="https://i.postimg.cc/K8xMnLdG/codgif-ezgif-com-crop.gif" alt="promo gif">
+      <div class="promo-badge">DISKON SPESIAL</div>
+    </div>
+
+    <div class="card section embed">
+      <!-- OrderOnline Embed Form -->
+      <div class="ooef">
+        <form class="orderonline-embed-form" data-username="vita" data-product-slug="lace-hotpants" data-product-id="68f7981c1e10e6aa540abcea" id="oo-embed-form-lace-hotpants-6338" data-origin="orderonline">
+          <div class="ooef-loader"><div aria-live="polite" role="status"><div>Loading...</div></div></div>
+        </form>
+      </div>
+    </div>
+
+    <footer>© <span id="year"></span> Vita • Mocha Modest</footer>
   </div>
 
-  <footer>
-    © 2025 Lace Hotpants | Desain oleh Vita Collection
-  </footer>
-</div>
+  <script>
+    // countdown
+    const end = new Date(); end.setHours(23,59,59,999);
+    if (new Date()>end) end.setDate(end.getDate()+1);
+    setInterval(()=>{
+      const now=new Date(); const diff=end-now;
+      const d=Math.floor(diff/86400000);
+      const h=Math.floor((diff/3600000)%24);
+      const m=Math.floor((diff/60000)%60);
+      const s=Math.floor((diff/1000)%60);
+      document.getElementById('d').textContent=String(d).padStart(2,'0');
+      document.getElementById('h').textContent=String(h).padStart(2,'0');
+      document.getElementById('m').textContent=String(m).padStart(2,'0');
+      document.getElementById('s').textContent=String(s).padStart(2,'0');
+    },1000);
+
+    document.getElementById('year').textContent=new Date().getFullYear();
+
+    // load OrderOnline script dynamically
+    (function(w,d,e,v,id,t,s){
+      if(d.getElementById(id))return;
+      t=d.createElement(e);t.async=!0;t.src=v;t.id=id;
+      s=d.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s);
+    })(window,document,'script','https://cdn.orderonline.id/js/embed-v2-slim.min.js?v=8.0.4','oo-embed-js');
+  </script>
 </body>
 </html>
